cleanup test cases